# Python-Tutorial

./: README.md  pyproject.toml  requirements.txt
Basics/: 1_print_statements.py  2_escape_sequences.py  3_high_low_languages.py  4_comments.py  5_data_types.py  6_kwlist.py  7_string.py  output.txt  print.py
Concepts/1_Fundamentals/: 10_user_input.py  1_helloWorld.py  2_variables.py  3_private_variables.py  4_data_types.py  5_type_casting.py  6_unicode.py  7_operators.py  8_operator_precedence.py  9_comments.py
Concepts/7_Solid_Principles/: 1_SRP.py  2_OCP.py  base_version.py
Concepts/8_Unit_Testing/: calc.py  employee.py
Concepts/8_Unit_Testing/test/: test_calc.py  test_employee.py
Programs/1_Beginner/: 10_fileHandling.py  11_listComprehension.py  12_exceptionHandling.py  13_addTwoNum.py  14_maxOfTowNum.py  15_GCD.py  16_factorial.py  17_simpleInterest.py  18_compoundInterest.py  19_armstrong.py  1_swapping.py  20_areaOfCircle.py  21_primeNumOfIntervals.py  22_primeOrNot.py  24_fibonacciOrNot.py  25_sumOfArray.py  2_userInput.py  3_conditionalStatement.py  4_looping.py  5_function.py  6_list.py  7_tuples.py  8_dict.py  9_string.py
Programs/1_Beginner/input/: file.txt
Programs/2_Intermediate/Array/: 1_sumOfArray.py  2_largestElementinArray.py  3_arrayRotation.py  4_splitArrayAndAdd.py  5_arrayMultiplicationDividedbyN.py  6_isMonotonic.py  7_BubbleSort.py
Programs/2_Intermediate/List/: 10_TargetValueInList.py  11_zerosToEnd.py  1_PatterPrinting.py  2_interchangeFirstLastElementList.py  3_bubbleSort.py  4_linearSearch.py  5_addOfTwoIndex.py  8_sorting.py  (+3 more)
(+6 files in other folders)
