[project]
name = "python_tutorial"
version = "0.1.0"
description = "Python Tutorial from basic to advanced"
authors = [
    {name = "Gopinath R"}
]
license = {text = "Gopinath & Co"}
readme = "README.md"
requires-python = "3.14"
dependencies = [
    "fastapi (>=0.123.7,<0.124.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
